--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <input type="hidden" name="_subject" value="New Email submission!">
     <input type="email" name="email" placeholder="Email Address" required>
     <input type="hidden" name="_captcha" value="false">
-    <input type="hidden" name="_next" value="https://dadqm.com/thankyou.html">
+    <input type="hidden" name="_next" value="https://sitenkftesting.netlify.app/thankyou.html">
      <input type="text" name="message" placeholder="write your message here" required>
 
      <button type="submit">Send</button>
